--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,5 @@
   "version": 2,
   "name": "placement_cell",
   "builds": [{ "src": "index.js", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "./routes" }]
+  "routes": [{ "src": "/(.*)", "dest": "index.js" }]
 }
